# XiCameraSync

./: CMakeLists.txt  main.cpp
